Fix desktop alignment and buttons

--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -15,6 +15,10 @@ div,
       color: rgba(195, 45, 42, 0.7);
       margin-top: 10px;
     }
+
+    span {
+      vertical-align: middle;
+    }
   }
 
   &.progress {
