--- a/css/base.scss
+++ b/css/base.scss
@@ -308,7 +308,6 @@ td img.icon,
 .ui.celled.table .exception,
 .ui.celled.table .exception * {
   padding-left: 3%;
-  margin-bottom: 5px;
   vertical-align: top;
 }
 
